# punctilious

./: .readthedocs.yaml  LICENSE  README.md  colored-trees.ipynb  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.obsolete  setup.py  setup.py.obsolete
TODO/: TODO.py  _TODO.py
branding/: colors.txt
data/: absorption_unicode.txt  biconditional_elimination_2_plaintext.txt  biconditional_introduction_plaintext.txt  conjunction_elimination_2_unicode.txt  conjunction_introduction_plaintext.txt  conjunction_introduction_unicode.txt  equal_terms_substitution_unicode.txt  hypothesis_unicode.txt  inconsistency_introduction_1_plaintext.txt  inconsistency_introduction_2_plaintext.txt  inconsistency_introduction_2_unicode.txt  report_mancosou_2021_classical_logic_k0_noproof_enus_plaintext.txt  report_mancosou_2021_classical_logic_k0_noproof_enus_unicode.txt  report_mancosou_2021_classical_logic_k0_proof_enus_plaintext.txt  report_mancosou_2021_classical_logic_k0_proof_enus_unicode.txt  report_mancosou_2021_intuitionistic_logic_j0_noproof_enus_plaintext.txt  report_mancosou_2021_intuitionistic_logic_j0_noproof_enus_unicode.txt  report_mancosou_2021_intuitionistic_logic_j0_proof_enus_plaintext.txt  report_mancosou_2021_intuitionistic_logic_j0_proof_enus_unicode.txt  report_mancosou_2021_minimal_logic_m0_noproof_enus_plaintext.txt  report_mancosou_2021_minimal_logic_m0_noproof_enus_unicode.txt  report_mancosou_2021_minimal_logic_m0_proof_enus_plaintext.txt  report_mancosou_2021_minimal_logic_noproof_enus_plaintext.txt  report_mgz_2021_classical_logic_k0_noproof_enus_plaintext.txt  report_mgz_2021_classical_logic_k0_noproof_enus_unicode.txt  report_mgz_2021_classical_logic_k0_proof_enus_plaintext.txt  report_mgz_2021_classical_logic_k0_proof_enus_unicode.txt  report_mgz_2021_intuitionistic_logic_j0_noproof_enus_plaintext.txt  report_mgz_2021_intuitionistic_logic_j0_noproof_enus_unicode.txt  report_mgz_2021_intuitionistic_logic_j0_proof_enus_plaintext.txt  report_mgz_2021_intuitionistic_logic_j0_proof_enus_unicode.txt  report_mgz_2021_minimal_logic_m0_noproof_enus_plaintext.txt  report_mgz_2021_minimal_logic_m0_noproof_enus_unicode.txt  report_mgz_2021_minimal_logic_m0_proof_enus_plaintext.txt  report_mgz_2021_minimal_logic_m0_proof_enus_unicode.txt  report_tao_2006_the_peano_axioms_noproof_enus_plaintext.txt  report_tao_2006_the_peano_axioms_noproof_enus_unicode.txt  report_tao_2006_the_peano_axioms_proof_enus_plaintext.txt  report_tao_2006_the_peano_axioms_proof_enus_unicode.txt  sample_absorption_plaintext.txt  (+80 more)
docs/: absorption.md  axiomatic_method.md  bibliography.md  biconditional_introduction.md  class.md  conf.py  conjunction_introduction.md  consistency.md  definitional-equality.rst  derivable-of-formulae.md  derivation_rule.md  elaboration_of_theories.md  equal_terms_substitution_inference_rule.md  formula.md  foundation_system  homography.rst  hypothesis.md  inference_rule.md  modules.rst  modus_ponens.md  proof-by-contradiction.md  punctilious.rst  refutation-b-ontradition.md  relation.md  requirements.txt  requirements.txt.backup  stabilized_of_theories.md  statement.md  substitution.md  syntactic-equivalence.rst  theoretical-morphism.md  theory-elaboration-sequence.md
docs_OBSOLETE/: requirements.txt
docs_to_integrate/: absorption.rst  creation.rst  declaration.rst  definition.md  inference_rule.md  modus_ponens.rst  theoretical_morphism.md  variable_substitution.md
jupyter/: Untitled.ipynb
project/: build_samples.py  formula_enumeration.txt  n_enumeration.py  sandbox.py  sandbox2.py
punctilious/: _TODO.py  __init__.py  core.py  foundation_system_1.py  graph.py  graph_2.py  locale_en_us.py  logic_1.py  natural_1.py  natural_numbers_1.py  random_data.py  rep.py  repm.py  sandbox.py  sandbox2.py  test.html  test.txt  test_core.py  test_core_obsolete.py  test_env_1.py  text.py  unicode.py  unicode_utilities.py
punctilious2/: core.py  prnt.py  random_data.py  repm.py  sandbox.py  sandbox2.py  test_core.py
punctilious_obsolete/: core.py  logic_1.py  natural_1.py  sandbox.py  test_env_1.py
sample/: build.py  build_samples.py  pet_theory_1.py
sandbox/: binary_tree_test.py  bit_operations.py  sanbox4.py  sandbox.py  sandbox2.py  sandbox3.py  sandbox5.py  script.txt  test.py  test1.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  zeta.py  zeta_2.py
scripts/: build_docs.ps1  build_run_build.py  build_windows_run_build.ps1  distribute_windows_upload_to_pypi.ps1  install_in_venv_from_pypi__windows.ps1  install_punctilious_from_dev.ps1  prebuild_generate_sample_outputs.py  prebuild_generate_theory_reports.py  prebuild_run_test_legacy.py  prebuild_windows_increment_version_patch.ps1  prebuild_windows_upgrade_pip.ps1  sandbox_1.ps1  sandbox_2.ps1  start_venv.ps1  stop_venv.ps1
snippets/: chars.txt
source/: conf.py  index.rst
tests/: absorption.py  biconditional_elimination_1.py  biconditional_elimination_2.py  biconditional_elimination_right.py  biconditional_introduction.py  conftest.py  conjunction_elimination_1.py  conjunction_elimination_2.py  conjunction_introduction.py  disjunction_introduction_1.py  disjunction_introduction_2.py  double_negation_elimination.py  double_negation_introduction.py  equal_terms_substitution.py  equality_commutativity.py  hypothesis.py  inconsistency_introduction_1.py  inconsistency_introduction_2.py  inconsistency_introduction_3.py  modus_ponens.py  test_axiom.py  (+163 more)
(+1388 files in other folders)
