[project]
name = "punctilious"
version = "1.0.0"
authors = [
    { name = "David Doret", email = "david.doret@icloud.com" },
]
keywords = ["math", "mathematics", "proof", "proof assistant", "math proof assistant", "formal system"]
description = "A human-friendly and developer-friendly math proof assistant"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics"
]
# repository = "https://github.com/daviddoret/punctilious"
# homepage = "https://github.com/daviddoret/punctilious"
# documentation = "https://punctilious.readthedocs.io/en/latest/"
# license = "MIT License"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/daviddoret/punctilious"
"Bug Tracker" = "https://github.com/daviddoret/punctilious/issues"
"Documentation" = "https://punctilious.readthedocs.io/en/latest/"
"Repository" = "https://github.com/daviddoret/punctilious"