[project]
name = "punctilious"
version = "2.0.2"
authors = [{ name = "David Doret", email = "david.doret@icloud.com" }]
keywords = ["math", "mathematics", "proof", "proof assistant", "math proof assistant", "formal system", ]
description = "A human-friendly and developer-friendly math proof assistant"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics"]
# repository = "https://github.com/daviddoret/punctilious"
# homepage = "https://github.com/daviddoret/punctilious"
# documentation = "https://punctilious.readthedocs.io/en/latest/"
# license = "MIT License"

[build-system]
requires = ["build", "setuptools", "tomli"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/daviddoret/punctilious"
"Bug Tracker" = "https://github.com/daviddoret/punctilious/issues"
"Documentation" = "https://punctilious.readthedocs.io/en/latest/"
"Repository" = "https://github.com/daviddoret/punctilious"

[tool.pytest.ini_options]
pythonpath = "src/punctilious"
addopts = [
    "--import-mode=importlib",
]
# Enable direct output of pytest to the console
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
# https://docs.pytest.org/en/latest/how-to/logging.html#live-logs
[pytest]
log_cli = 1
log_cli_level = 'INFO'
log_cli_format = '%(message)s'

log_file = 'pytest.log'
log_file_level = 'DEBUG'
log_file_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_file_date_format = '%Y-%m-%d %H:%M:%S'

[tool.bumpver]
current_version = "2.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]
"src/punctilious/__init__.py" = [
    '__version__ = "{version}"',
]
"src/sample/__init__.py" = [
    '__version__ = "{version}"',
]
"src/theory/__init__.py" = [
    '__version__ = "{version}"',
]